--- a/Hello_world.html
+++ b/Hello_world.html
@@ -21,7 +21,7 @@
          const root = document.getElementById('root');
          root.appendChild(heading);
     </script> -->
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     
 </body>
 
